--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 div{
-			background:url("download.png")  no-repeat;
+			background:url("../download.png")  no-repeat;
 			width:200px;
 			height:200px;
 			border:1px solid black;
